--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -41,6 +41,6 @@ jobs:
         run: |
           git config --global user.name ${{ secrets.username }}
           git config --global user.email ${{ secrets.email }}
-          git add Eksperimen_SML_Dimas-Tri-Kurniawan/
+          git add .
           git commit -m "AUTOMATICALLY preprocess dataset"
           git push origin master
